# bro-draft

./: .gitignore  CLAUDE.md  EnglishTexts.txt  Makefile  QUICK_START.md  README.md  README_RU.md  SCREEN_RECOGNITION_README.md  SPEEDTEST.md  bestgetvideocommand.sh  capture_to_share.sh  claude_usage_monitor.sh  clipboard-monitor.py  compare_images.sh  detector.py  doubleenter.sh  emulate.sh  jetbrains_projects.py  last.prompt.txt  microphone-monitor.html  monitor_selection.py  package-lock.json  package.json  pnpm-lock.yaml  screenshot_benchmark.sh  start.sh  stream_test.html  vite.config.ts  watch_screenshots.sh
.claude/: after-changes.sh  settings.local.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  websocket_stream.rs
src/components/: TerminalGrid.vue  TerminalTabs.vue  XTerminal.vue
src/pages/: AliasesPage.vue  AreaSelectorPage.vue  AutomatizationPage.vue  ButtonsPage.vue  CirclePage.vue  ConvertersPage.vue  EditorPage.vue  HomePage.vue  KeyboardPage.vue  NotificationsPage.vue  OverlayButtonPage.vue  ProjectsPage.vue  RecognitionPage.vue  ScreenshotPopupPage.vue  ScreenshotsPage.vue  SettingsPage.vue  ShellPage.vue  SideButtonOverlay.vue  SideMenuPage.vue  StreamingPage.vue  TerminalPage.vue  TerminalPopup.vue  TerminalProjectPopup.vue  TestPage.vue  TranslationPopupPage.vue  TranslationsPage.vue  WatcherPage.vue  YouTubePage.vue
src/router/: index.ts
src/services/: beepSounds.ts  microphoneService.ts
src/types/: vue-grid-layout.d.ts
