[package]
name = "bro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["time", "process"] }
sysinfo = "0.32"
directories = "5"
screenshots = "0.6"
image = "0.25"
base64 = "0.22"
png = "0.17"
enigo = "0.2"
rdev = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.33"
windows = { version = "0.58", features = ["implement"] }

